# the_agency

./: .gitignore  DEFINITION_OF_DONE.md  LICENSE  MANIFEST.in  Makefile  README.md  agency.py  archive_readme_summary.py  archive_session_temp.py  checkpoint.txt  commit_message.txt  fix_final_syntax_v3.sh  fix_if_final.sh  fix_precise_syntax.sh  fix_syntax_errors.sh  fix_syntax_final.sh  knowledge.txt  project_knowledge.md  pyproject.toml  reminder.txt  revert_bad_fixes.sh  run_agency_test.ps1  session.md  test_name_agent.py  todo.txt
.gemini/: GEMINI.md
docs/: agent_structure.md  cmo_state.md
documentation_agent/: dummy_module.py
features/: agent_launcher.md  dockerize_agents.md  documentation_agent.md  frontend_developer_agent.md  historian_agent.md  ollama_agent.md  project_shipper_agent.md  root_agent.md  root_agent_parallel_calls.md  web_surfer_agent.md
file_analyzer_agent/: main.py
frontend_developer_agent/: Dockerfile  main.py
historian_agent/: main.py
legacy/: test_root_agent.py
logs/: results_deepseek-r1.txt  results_llama3.2.txt  results_mistral.txt  results_qwen2.5.txt
name_generator_agent/: main.py  requirements.txt
ollama_agent/: main.py
paper/: directive_grounding.tex  references.bib
project_office_agent/: main.py
project_shipper_agent/: main.py
root_agent/: main.py
scripts/: agents.conf  bump_version.py  check_agent_status.sh  load_session_context.sh  parallel_start_dockerized_agents.sh  restart_dockerized_agents.sh  scan_pr.py  start_agents.sh  start_dockerized_agents.sh  stop_agents.sh  stop_dockerized_agents.sh
(+98 files in other folders)
